# eth_predictor

./: .gitignore  pandas_prac.ipynb  pyproject.toml
crypto_pred/: lstm.ipynb
crypto_pred/crypto/: ETH.csv
data/: processed_aapl_data.csv
pairs_trading/: GOOG.csv  GOOGL.csv  calc_spread.ipynb  get_data.ipynb  get_data.py
